# threescale-wasm-auth

./: .gitignore  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  bors.toml  build.rs  deny.toml  env
.cargo/: audit.toml
.github/: CODEOWNERS
.github/workflows/: audit.yaml  build.yaml  ci.yaml  clippy.yaml  coverage.yaml  format.yaml  license.yaml
ci/: Dockerfile.build
compose/: docker-compose.yaml
compose/envoy/: envoy.yaml  lds.yaml
compose/examples/: Dockerfile  basic_auth_app_id_with_key.sh  oidc.sh  oidc_external.sh  open_sesame.sh  query_string_app_id_key.sh  user_key.sh
container/: Dockerfile  Makefile  manifest.yaml
docs/: operations.md  reference.md
servicemesh/: Dockerfile  Makefile
servicemesh/crds/: threescale-saas-dstrule.yaml  threescale-saas-svcentry.yaml
servicemesh/crds/istio/: envoyfilter.yaml  wasmplugin.yaml
servicemesh/crds/ossm/: servicemeshextension.yaml
src/: configuration.rs  lib.rs  log.rs  proxy.rs  threescale.rs  upstream.rs  util.rs
src/configuration/: operation.rs  source.rs
src/configuration/api/: v1.rs
src/configuration/operation/: check.rs  control.rs  decode.rs  format.rs  stack.rs  string.rs
src/proxy/: authrep.rs  config_fetcher.rs  http_context.rs  metadata.rs  request_headers.rs  root_context.rs
src/proxy/config_fetcher/: thread_local.rs
src/threescale/: backend.rs  credentials.rs  mapping_rule.rs  service.rs  system.rs  usage.rs
src/util/: glob.rs  serde.rs
src/util/rand/: thread_rng.rs
src/util/serde/: json.rs  yaml.rs
